# src/app/router.ts
@@ -5,6 +5,7 @@ import { QueryBus } from '@/lib/cqrs/query-bus';
 import { registerHandlers } from '@/lib/cqrs/handlers-register';
 import { creteUserRouting } from './features/user/router';
 import { createAuthRouting } from './features/auth/router';
+import { createOrganizationRouting } from './features/organization/router';
 
 export const createRouter = async () => {
   const router = express.Router();
@@ -16,6 +17,7 @@ export const createRouter = async () => {
 
   router.use('/users', creteUserRouting({ commandBus, queryBus }));
   router.use('/auth', createAuthRouting({ commandBus }));
+  router.use('/organizations', createOrganizationRouting({ commandBus }));
 
   return router;
 };
